--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "prisma-cms/boilerplate"]
 	path = prisma-cms/boilerplate
 	url = https://github.com/prisma-cms/boilerplate
+[submodule "prisma-cms/prisma-cms.com"]
+	path = prisma-cms/prisma-cms.com
+	url = https://github.com/prisma-cms/prisma-cms.com
