--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "prisma-cms/prisma-cms.com"]
 	path = prisma-cms/prisma-cms.com
 	url = https://github.com/prisma-cms/prisma-cms.com
+[submodule "freecodecamp/freeCodeCamp"]
+	path = freecodecamp/freeCodeCamp
+	url = https://github.com/freeCodeCamp/freeCodeCamp.git
