Add submodule prisma-cms.com--nextjs

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,10 @@
 [submodule "prisma-cms/prisma-cms.com"]
 	path = prisma-cms/prisma-cms.com
 	url = https://github.com/prisma-cms/prisma-cms.com
+[submodule "prisma-cms/prisma-cms.com--nextjs"]
+	path = prisma-cms/prisma-cms.com--nextjs
+	url = https://github.com/prisma-cms/prisma-cms.com
+	branch = next-js
 [submodule "freecodecamp/freeCodeCamp"]
 	path = freecodecamp/freeCodeCamp
 	url = https://github.com/freeCodeCamp/freeCodeCamp.git
