--- a/prisma-cms/Dockerfile
+++ b/prisma-cms/Dockerfile
@@ -7,6 +7,9 @@ ARG ROLE
 ARG endpoint
 ENV endpoint $endpoint
 
+ARG API_ENDPOINT
+ENV API_ENDPOINT $API_ENDPOINT
+
 ARG ENV_MODE
 ENV ENV_MODE $ENV_MODE
 
