--- a/freecodecamp/Dockerfile
+++ b/freecodecamp/Dockerfile
@@ -7,19 +7,23 @@ FROM node:lts
 
 # RUN apt-get update && apt-get install -y --no-install-recommends gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
 
-WORKDIR /app
+# WORKDIR /app
 
-RUN git clone https://github.com/freeCodeCamp/freeCodeCamp.git
+# RUN git clone https://github.com/freeCodeCamp/freeCodeCamp.git
 
+# WORKDIR /app
+
+# COPY ./freeCodeCamp /.
 
 # # ARG SITE=boilerplate
 
 WORKDIR /app/freeCodeCamp
 
-# COPY ./freeCodeCamp /app
+COPY ./freeCodeCamp ./
 COPY ./.env ./.env
 
-RUN npm install --unsafe-perm
+# RUN npm install --unsafe-perm
+RUN npm ci --unsafe-perm
 
 
 # WORKDIR /app/tools/scripts/seed/
