--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,6 +32,16 @@ services:
         - endpoint=${prod_endpoint}
     command: bash -c "yarn start"
 
+  freecode_academy:
+    restart: always
+    environment: 
+      ENV_MODE: production
+    build:
+      args: 
+        - ENV_MODE=production
+        - endpoint=${prod_endpoint}
+    command: bash -c "yarn start"
+
   api:
     restart: always
     environment: 
