--- a/.env.sample
+++ b/.env.sample
@@ -15,5 +15,7 @@ prod_endpoint=http://prisma:4466/prisma-cms/prod
 API_ENDPOINT=http://api:4000
 APP_SECRET=YOUR_STRONG_SECRET
 
-Sendmail=true 
+Sendmail=true
 
+# Uncomment to allow service-worker
+# PWA=true
