--- a/prisma-cms/Dockerfile
+++ b/prisma-cms/Dockerfile
@@ -19,6 +19,9 @@ ENV PUBLIC_URL $PUBLIC_URL
 ARG PWA
 ENV PWA $PWA
 
+ARG DATABASE_URL
+ENV DATABASE_URL $DATABASE_URL
+
 RUN apk add bash 
 RUN apk add mc 
 RUN apk add curl 
