--- a/.env.sample
+++ b/.env.sample
@@ -19,3 +19,9 @@ Sendmail=true
 
 # Uncomment to allow service-worker
 # PWA=true
+
+# tolgee
+TOLGEE_AUTHENTICATION_ENABLED=true
+TOLGEE_AUTHENTICATION_INITIAL_PASSWORD=
+TOLGEE_AUTHENTICATION_INITIAL_USERNAME=
+TOLGEE_AUTHENTICATION_JWT_SECRET=
