--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -81,3 +81,8 @@ services:
       ME_CONFIG_MONGODB_SERVER: "mongodb"
       # ME_CONFIG_MONGODB_ADMINUSERNAME: root
       # ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
+
+  tolgee:
+    ports:
+      - "25432:25432"
+      - "8080:8080"
