--- a/.env.sample
+++ b/.env.sample
@@ -24,3 +24,8 @@ TOLGEE_AUTHENTICATION_ENABLED=true
 TOLGEE_AUTHENTICATION_INITIAL_PASSWORD=
 TOLGEE_AUTHENTICATION_INITIAL_USERNAME=
 TOLGEE_AUTHENTICATION_JWT_SECRET=
+
+
+OPENAI_API_KEY=
+OPENAI_API_BASE_URL=https://api.openai.com/v1
+OPENAI_DEFAULT_MODEL=gpt-4.1-mini
