--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
         - endpoint=${dev_endpoint}
         - API_ENDPOINT=${API_ENDPOINT}
         - PWA=${PWA}
+        - APP_SECRET=${APP_SECRET}
         - DATABASE_URL=${DATABASE_URL}
         - OPENAI_API_KEY=${OPENAI_API_KEY}
         - OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL}
