--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -201,6 +201,32 @@ services:
     volumes:
       - ./libretranslate/db/argos-translate/packages:/root/.local/share/argos-translate/packages
 
+  supabase:
+    image: supabase/postgres:15.1.0.147
+    volumes:
+      - ./supabase/data:/var/lib/postgresql/data
+      # - ./supabase/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
+    environment:
+      - POSTGRES_PASSWORD=${SUPABASE_DB_PASSWORD:-your_supabase_password}
+      - POSTGRES_DB=${SUPABASE_DB_NAME:-postgres}
+    env_file:
+      - .env
+    healthcheck:
+      test: pg_isready -U postgres -h localhost
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL:-admin@admin.com}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD:-admin}
+    volumes:
+      - ./pgadmin/backups:/var/lib/pgadmin/storage
+    # depends_on:
+    #   - supabase
+
 # volumes:
 #   mysql:
 # schema:
