--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -47,6 +47,7 @@ services:
   proxy:
     ports:
       - 2015:2015
+      - 2443:2443
 
   pma:
     ports:
@@ -100,3 +101,9 @@ services:
   pgadmin:
     ports:
       - 5050:80
+
+  n8n:
+    environment:
+      - N8N_SECURE_COOKIE=false
+    ports:
+      - 5678:5678
