--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -227,6 +227,44 @@ services:
     # depends_on:
     #   - supabase
 
+  n8n:
+    build:
+      context: ./n8n
+      network: ${NETWORK_NAME:-prisma-cms-default}
+      args:
+        - DB_POSTGRESDB_HOST=supabase
+        - DB_POSTGRESDB_PORT=5432
+        - DB_POSTGRESDB_DATABASE=n8n
+        - DB_POSTGRESDB_USER=postgres
+        - DB_POSTGRESDB_PASSWORD=${SUPABASE_DB_PASSWORD:-your_supabase_password}
+    # restart: always
+    environment:
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=supabase
+      - DB_POSTGRESDB_PORT=5432
+      # - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_USER=postgres
+      - DB_POSTGRESDB_PASSWORD=${SUPABASE_DB_PASSWORD:-your_supabase_password}
+      - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
+      - N8N_EDITOR_BASE_URL=${N8N_EDITOR_BASE_URL}
+      # - N8N_HOST=${N8N_HOST:-localhost}
+      # - N8N_PORT=${N8N_PORT:-5678}
+      # - N8N_PROTOCOL=${N8N_PROTOCOL:-http}
+      - N8N_PROXY_HOPS=1
+      - WEBHOOK_URL=${WEBHOOK_URL}
+      - N8N_DIAGNOSTICS_ENABLED=false
+      - N8N_DIAGNOSTICS_CONFIG_FRONTEND=false
+      - N8N_DIAGNOSTICS_CONFIG_BACKEND=false
+    # links:
+    #   - supabase
+    volumes:
+      # - ./n8n/n8n_storage:/home/node/.n8n
+      - ./n8n/custom-nodes:/home/node/.n8n/custom
+    # depends_on:
+    #   postgres:
+    #     condition: service_healthy
+
 # volumes:
 #   mysql:
 # schema:
