Added telegram auth

--- a/prisma-cms/Dockerfile
+++ b/prisma-cms/Dockerfile
@@ -34,6 +34,9 @@ ENV OPENAI_API_KEY $OPENAI_API_KEY
 ARG TILE_SERVER_URL
 ENV TILE_SERVER_URL $TILE_SERVER_URL
 
+ARG NEXT_PUBLIC_TELEGRAM_BOT_NAME
+ENV NEXT_PUBLIC_TELEGRAM_BOT_NAME $NEXT_PUBLIC_TELEGRAM_BOT_NAME
+
 RUN apt-get update
 
 RUN apt-get install -y bash 
