--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -252,7 +252,7 @@ services:
       # - N8N_PORT=${N8N_PORT:-5678}
       # - N8N_PROTOCOL=${N8N_PROTOCOL:-http}
       - N8N_PROXY_HOPS=1
-      - WEBHOOK_URL=${WEBHOOK_URL}
+      - WEBHOOK_URL=${N8N_WEBHOOK_URL}
       - N8N_DIAGNOSTICS_ENABLED=false
       - N8N_DIAGNOSTICS_CONFIG_FRONTEND=false
       - N8N_DIAGNOSTICS_CONFIG_BACKEND=false
