--- a/prisma-cms/Dockerfile
+++ b/prisma-cms/Dockerfile
@@ -37,6 +37,9 @@ ENV TILE_SERVER_URL $TILE_SERVER_URL
 ARG NEXT_PUBLIC_TELEGRAM_BOT_NAME
 ENV NEXT_PUBLIC_TELEGRAM_BOT_NAME $NEXT_PUBLIC_TELEGRAM_BOT_NAME
 
+ARG NEXT_PUBLIC_OPEN_WEBUI_PUBLIC_URL
+ENV NEXT_PUBLIC_OPEN_WEBUI_PUBLIC_URL $NEXT_PUBLIC_OPEN_WEBUI_PUBLIC_URL
+
 RUN apt-get update
 
 RUN apt-get install -y bash 
