--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,6 +102,7 @@ services:
         - OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL}
         - OPENAI_DEFAULT_MODEL=${OPENAI_DEFAULT_MODEL}
         - NEXT_PUBLIC_TELEGRAM_BOT_NAME=${NEXT_PUBLIC_TELEGRAM_BOT_NAME}
+        - NEXT_PUBLIC_OPEN_WEBUI_PUBLIC_URL=${NEXT_PUBLIC_OPEN_WEBUI_PUBLIC_URL}
     volumes:
       - ./prisma-cms/freecode.academy/public:/www/freecode.academy/public
       - ./prisma-cms/freecode.academy/shared:/www/freecode.academy/shared
@@ -265,6 +266,14 @@ services:
     # depends_on:
     #   postgres:
     #     condition: service_healthy
+
+  open-webui:
+    image: ghcr.io/open-webui/open-webui:cuda
+    volumes:
+      - ./open-webui/data:/app/backend/data
+    environment:
+      - OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
 
 # volumes:
 #   mysql:
