--- a/prisma-cms/Dockerfile
+++ b/prisma-cms/Dockerfile
@@ -51,6 +51,15 @@ RUN apt-get install -y g++
 RUN apt-get install -y git 
 RUN apt-get install -y iputils-ping
 
+# Установка Docker CLI для управления контейнерами через socket
+RUN apt-get install -y ca-certificates gnupg lsb-release && \
+    install -m 0755 -d /etc/apt/keyrings && \
+    curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg && \
+    chmod a+r /etc/apt/keyrings/docker.gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
+    apt-get update && \
+    apt-get install -y docker-ce-cli
+
 
 # FROM mhart/alpine-node:15 as build
 
