--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,7 @@ services:
         - OPENAI_API_KEY=${OPENAI_API_KEY}
         - OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL}
         - OPENAI_DEFAULT_MODEL=${OPENAI_DEFAULT_MODEL}
+        - NEXT_PUBLIC_TELEGRAM_BOT_NAME=${NEXT_PUBLIC_TELEGRAM_BOT_NAME}
     volumes:
       - ./prisma-cms/freecode.academy/public:/www/freecode.academy/public
       - ./prisma-cms/freecode.academy/shared:/www/freecode.academy/shared
@@ -226,11 +227,6 @@ services:
       - ./pgadmin/backups:/var/lib/pgadmin/storage
     # depends_on:
     #   - supabase
-
-# volumes:
-#   mysql:
-# schema:
-# shared:
 
 networks:
   default:
