--- a/.env.sample
+++ b/.env.sample
@@ -29,3 +29,5 @@ TOLGEE_AUTHENTICATION_JWT_SECRET=
 OPENAI_API_KEY=
 OPENAI_API_BASE_URL=https://api.openai.com/v1
 OPENAI_DEFAULT_MODEL=gpt-4.1-mini
+
+GRAPHQL_API_ENDPOINT=http://freecode_academy:3000/api
