--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,6 +228,43 @@ services:
     # depends_on:
     #   - supabase
 
+  n8n:
+    build:
+      context: ./n8n/n8n
+      network: ${NETWORK_NAME:-prisma-cms-default}
+      args:
+        - GRAPHQL_ENDPOINT=${N8N_GRAPHQL_ENDPOINT}
+        - GRAPHQL_API_ENDPOINT=${N8N_GRAPHQL_API_ENDPOINT}
+        - JWT_SECRET=${N8N_JWT_SECRET}
+        - API_ONLY=true
+    environment:
+      - N8N_HOST=${N8N_HOST:-localhost}
+      - N8N_PORT=${N8N_PORT:-5678}
+      - N8N_PROTOCOL=${N8N_PROTOCOL:-http}
+      - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}
+      - N8N_LOG_LEVEL=${N8N_LOG_LEVEL:-info}
+      - N8N_METRICS=${N8N_METRICS:-false}
+      - N8N_PERSONALIZATION_ENABLED=${N8N_PERSONALIZATION_ENABLED:-false}
+      - N8N_BOOTSTRAP_ACTIVATE_WORKFLOWS=${N8N_BOOTSTRAP_ACTIVATE_WORKFLOWS}
+      - WEBHOOK_URL=${N8N_WEBHOOK_URL:-http://localhost:5678/}
+      - DB_TYPE=${DB_TYPE:-sqlite}
+      - TZ=${TZ:-Europe/Moscow}
+      - KNOWLEDGE_DB_PATH=${KNOWLEDGE_DB_PATH:-/home/node/knowledge-db}
+      - NODES_EXCLUDE=[]
+      - GRAPHQL_ENDPOINT=${N8N_GRAPHQL_ENDPOINT}
+      - GRAPHQL_API_ENDPOINT=${N8N_GRAPHQL_API_ENDPOINT}
+      - API_ONLY=true
+    # user: '${UID:-1000}:${GID:-1000}'
+    # volumes:
+    #   - ./n8n/n8n/volumes/home/node:/home/node
+    command: "npm run dev:n8n"
+    # command: "tail -f /dev/null"
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.n8n.rule=Host(`${N8N_HOST:-n8n.localhost}`)'
+      - 'traefik.http.routers.n8n.entrypoints=web'
+      - 'traefik.http.services.n8n.loadbalancer.server.port=5678'
+
 networks:
   default:
     name: ${NETWORK_NAME:-prisma-cms-default}
