--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -246,6 +246,15 @@ services:
       - N8N_METRICS=${N8N_METRICS:-false}
       - N8N_PERSONALIZATION_ENABLED=${N8N_PERSONALIZATION_ENABLED:-false}
       - N8N_BOOTSTRAP_ACTIVATE_WORKFLOWS=${N8N_BOOTSTRAP_ACTIVATE_WORKFLOWS}
+      - AGENT_DEFAULT_MODEL=${AGENT_DEFAULT_MODEL}
+      - AGENT_CHAT_MODEL=${AGENT_CHAT_MODEL}
+      - AGENT_GITLAB_MODEL=${AGENT_GITLAB_MODEL}
+      - AGENT_JUNIOR_DEV_MODEL=${AGENT_JUNIOR_DEV_MODEL}
+      - AGENT_MARKETING_DIRECTOR_MODEL=${AGENT_MARKETING_DIRECTOR_MODEL}
+      - AGENT_MIDDLE_DEV_MODEL=${AGENT_MIDDLE_DEV_MODEL}
+      - AGENT_PROJECT_MANAGER_MODEL=${AGENT_PROJECT_MANAGER_MODEL}
+      - AGENT_SENIOR_DEV_MODEL=${AGENT_SENIOR_DEV_MODEL}
+      - AGENT_TECHLEAD_MODEL=${AGENT_TECHLEAD_MODEL}
       - WEBHOOK_URL=${N8N_WEBHOOK_URL:-http://localhost:5678/}
       - DB_TYPE=${DB_TYPE:-sqlite}
       - TZ=${TZ:-Europe/Moscow}
